# numpycpp

./: .gitignore  AGENTS.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  numpycpp-config.cmake.in  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
bench/: CMakeLists.txt  bench.py  bench_core.cpp  bench_numpy.py
cmake/: preinst
example/: CMakeLists.txt  main.cpp
numpy/: avx512_loops.h  blas_bridge.h  core.cpp  core.h  einsum.cpp  einsum.h  elementwise.h  elementwise_py.h  init.h  io_py.h  linalg.cpp  linalg.h  npy_math_float.h  numpy.h  numpy_py.h  reduce.h  svml_bridge.h
numpy/detail/: avx512_loops.h  blas_bridge.h  linalg_backend.h  math_backend.h  npy_math_float.h  std_linalg_backend.h  std_math_backend.h  svml_bridge.h
numpycpp/: elementwise.h  elementwise_py.h  init.h  init_py.h  io.h  io_py.h  linalg.h  linalg_py.h  manipulation.h  manipulation_py.h  numpy.h  numpy_py.h  reduce_py.h
numpycpp/detail/: avx512_loops.h  blas_bridge.h  buffer_dtype.h  macros.h  npy_math_float.h  std_linalg_backend.h  std_math_backend.h  svml_bridge.h
pycpp/: core_py.h  einsum_py.h  init_py.h  linalg_py.h  manipulation_py.h  module.cpp  pycpp.h  pyproject.toml  reduce_py.h
tests/: CMakeLists.txt  Makefile  conftest.py  diagnose_numpy.py  make_csv.py  module.cpp  report.csv  report_bit_exact.csv  report_std.csv  run_report.sh  test_all.py  test_astype.py  test_core.py  test_einsum.py  test_linalg.py  ulp_precision.csv  utils.py
