[build-system]
requires = ["setuptools>=64", "pybind11>=2.10", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "numpycpp"
version = "0.1.0"
description = "C++ pixel-level alignment of Python numpy, powered by Eigen"
requires-python = ">=3.8"
license = {text = "MIT"}

[project.optional-dependencies]
test = [
    "numpy>=1.20",
    "pytest>=7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short", "--strict-markers"]
markers = [
    "slow: slow tests (deselect with '-m \"not slow\"')",
]
